--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.fot
 *.cb
 *.cb2
+*.hd
 
 ## Intermediate documents:
 *.dvi
@@ -246,3 +247,4 @@ ehthumbs_vista.db
 # Project specific
 thesis.pdf
 thesis-bot.yml
+sjtuthesis.pdf
