--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 before_script:
   - sed -i 's/,\s*fontset=\?\w*//' thesis.tex
-  - sed -i '/setmainfont/d' sjtuthesis.cls
+  - sed -i 's/documentclass\[/documentclass[fontset=fandol, /' thesis.tex
 
 script:
   - make validate
